# internal/api/http/v1/supplier_handler.go
@@ -1,9 +1,6 @@
 package v1
 
 import (
-	"net/http"
-
-	"github.com/gin-gonic/gin"
 	"github.com/vucongthanh92/go-test-exam/internal/application/supplier"
 )
 
@@ -17,16 +14,4 @@ func NewSupplierHandler(
 	return &SupplierHandler{
 		supplierService: supplierService,
 	}
-}
-
-// API get products list godoc
-// @Tags Supplier
-// @Summary search products with filter and return pagination
-// @Accept json
-// @Produce json
-// @Param  params body models.CreateCategoryReq true "CreateCategoryReq"
-// @Router 	/api/v1/products [get]
-// @Success	200
-func (h *ProductHandler) CreateSupplier(c *gin.Context) {
-	c.JSON(http.StatusOK, nil)
 }
